tests/run/error_unknown_interface.out
tests/run/error_unknown_interface.em:2:1: error: unknown interface in 'implements'
