tests/run/error_unknown_interface.em
// error_unknown_interface.em — implementing an interface that doesn't exist.
struct V implements Nope { n: int }
fn main() -> int { return 0 }
